# AtariBreakoutRL

./: .gitignore  main.py  pyproject.toml
config/: constants.py  main_cfg.py
container_setup/: Dockerfile  build.sh  credentials  launch_container.sh
notebooks/: homework_pytorch_main.ipynb
src/: action_sampler.py  agent.py  evaluation.py  model.py  td_loss.py
src/setup/: agent_setup.py  buffer_setup.py  env_setup.py
src/utils/: interrupts.py  seed.py  visualization.py
